appointment/src/objects/Schedule_RM__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Start_Time__c</fullName>
        <label>Early Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Early_Stop_Time__c</fullName>
        <label>Early Stop Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late_Start_Time__c</fullName>
        <label>Late Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late_Stop_Time__c</fullName>
        <label>Late Stop Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lunch_Deduction__c</fullName>
        <label>Lunch Deduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_Policy__c</fullName>
        <label>Lunch Policy</label>
        <referenceTo>Lunch_Policy__c</referenceTo>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lunch_Start_Time__c</fullName>
        <formula>Start_Time__c  +  Minimum_Hours_Worked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunch Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Minimum_Hours_Worked__c</fullName>
        <label>Minimum Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Number__c</fullName>
        <label>Schedule Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Hours__c</fullName>
        <formula>ROUND( Stop_Time__c -  Start_Time__c -  Lunch_Deduction__c  ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Time__c</fullName>
        <label>Stop Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Schedule RM</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules_RM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>